<resources>
    <string name="app_name" translatable="false">Todomoro</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loginPlease">Login</string>
    <string name="labelUsername">Username</string>
    <string name="labelPassword">Password</string>
    <string name="loginButton">Login</string>
    <string name="emptyUsername">Username can\'t be empty</string>
    <string name="emptyPassword">Password can\'t be empty</string>
    <string name="passwordTooShort">Password is too short (6 characters min)</string>
    <string name="labelLogout">Logout</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="currentUserlabel">Account</string>
    <string name="labelDayview">Day</string>
    <string name="labelWeeView">Week</string>
    <string name="action_refresh">Refresh</string>
    <string name="errorFetch">There was an error fetching data from the server</string>
    <string name="noTasks">No tasks available</string>
    <string name="serverError">Server Error has ocurred, check log for details</string>
    <string name="labelTodo">All todo\'s</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message
        history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="labelNewTask">Create a new task</string>
    <string name="labelTitle">Title</string>
    <string name="labelDescription">Description</string>
    <string name="setDueDate">Due date</string>
    <string name="emptyTitle">Title cannot be empty</string>
    <string name="setDueTime">Due Time</string>
    <string name="errorSaving">An error has ocurred saving your task. Try again later.</string>
</resources>
