<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_dayView"
                android:title="@string/labelDayview"/>
        <item
                android:id="@+id/nav_weekView"
                android:title="@string/labelWeeView"/>
    </group>

    <item android:title="@string/currentUserlabel">
        <menu>
            <item
                    android:id="@+id/nav_settings"
                    android:title="@string/action_settings"
                    android:icon="@drawable/ic_settings_black_24dp"/>
            <item
                    android:id="@+id/nav_logout"
                    android:title="@string/labelLogout"
                    android:icon="@drawable/ic_action_logout"/>
        </menu>
    </item>

</menu>
